# screenshot-taker

./: CMakeLists.txt  bmp.hpp  main.cpp
